--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-Flask==0.10.1
-tornado==4.3
+backports-abc==0.5
+backports.ssl-match-hostname==3.5.0.1
+certifi==2018.8.13
+click==6.7
+docutils==0.14
+Flask==1.0.2
+itsdangerous==0.24
+Jinja2==2.10
+lockfile==0.12.2
+MarkupSafe==1.0
 python-daemon==2.1.0
+singledispatch==3.4.0.3
+six==1.11.0
+tornado==4.3
+Werkzeug==0.14.1
